src/objects/FS_MDMEmailRequestDefaultValue__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>This will hold the default value on the excel attachment.</description>
    <fields>
        <fullName>FS_ApprovedByText__c</fullName>
        <label>Approved By Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_AttachmentFileName__c</fullName>
        <description>Purpose: holds the file name of the attachment</description>
        <label>Attachment File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_CaptionText__c</fullName>
        <label>Caption Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_CompanyAddress__c</fullName>
        <description>This is a default value in the MDM Request attachment.</description>
        <label>Company Address</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_CompanyCity__c</fullName>
        <description>This is a default value in the MDM Request attachment.</description>
        <label>Company City</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_CompanyFaxText__c</fullName>
        <description>This is a default value in the MDM Request attachment.</description>
        <label>Company Fax Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_CompanyFax__c</fullName>
        <description>This is a default value in the MDM Request attachment.</description>
        <label>Company Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FS_CompanyName__c</fullName>
        <description>This is a default value in the MDM Request attachment.</description>
        <label>Company Name</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_CompanyNote__c</fullName>
        <description>This is a default value in the MDM Request attachment.</description>
        <label>Company Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FS_CompanyPhoneText__c</fullName>
        <description>This is a default value in the MDM Request attachment.</description>
        <label>Company Phone Text</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_CompanyPhone__c</fullName>
        <description>This is a default value in the MDM Request attachment.</description>
        <label>Company Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FS_ConditionTypeValue__c</fullName>
        <description>This is a default value in the MDM Request attachment.</description>
        <label>Condition Type Value</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_EmailBody__c</fullName>
        <description>Purpose: holds the value for email body</description>
        <label>Email Body</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FS_EmailSubject__c</fullName>
        <description>Purpose: holds the value for email subject</description>
        <label>Email Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_FinanceManagerName__c</fullName>
        <label>Finance Manager Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_FinanceManagerPosition__c</fullName>
        <label>Finance Manager Position</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_NameText__c</fullName>
        <description>This is a default value in the MDM Request attachment.</description>
        <label>Name Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_PositionText__c</fullName>
        <label>Position Text</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_SalesManagerName__c</fullName>
        <label>Sales Manager Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_SalesManagerPosition__c</fullName>
        <label>Sales Manager Position</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_SalesOrganisation__c</fullName>
        <description>This is a default value in the MDM Request attachment.</description>
        <label>Sales Organisation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_SignatureText__c</fullName>
        <label>Signature Text</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_TargetOfDiscountValue__c</fullName>
        <description>This is a default value in the MDM Request attachment.</description>
        <label>Target Of Discount Value</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FS_Title__c</fullName>
        <description>This is a default value in the MDM Request attachment.</description>
        <label>Title</label>
        <length>225</length>
        <type>Text</type>
    </fields>
    <label>FS MDM Email Request Default Value</label>
</CustomObject>